force-app/main/default/objects/eCard_Bus_Serial_Number__x/eCard_Bus_Serial_Number__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_bus_serial_number</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_bus_serial_number</externalName>
    <label>eCard_Bus_Serial_Number</label>
    <pluralLabel>eCard_Bus_Serial_Number</pluralLabel>
</CustomObject>