force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/bus__c.field-meta.xml
<CustomField>
    <fullName>bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>bus</description>
    <externalDeveloperName>bus</externalDeveloperName>
    <label>bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>eCard_Bus_Serial_Number</relationshipLabel>
    <relationshipName>eCard_Bus_Serial_Number</relationshipName>
    <type>Lookup</type>
</CustomField>