force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/buspart_number__c.field-meta.xml
<CustomField>
    <fullName>buspart_number__c</fullName>
    <description>buspart_number</description>
    <externalDeveloperName>buspart_number</externalDeveloperName>
    <label>buspart_number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>