force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/createdby_name__c.field-meta.xml
<CustomField>
    <fullName>createdby_name__c</fullName>
    <description>createdby_name</description>
    <externalDeveloperName>createdby_name</externalDeveloperName>
    <label>createdby_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>