force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/has_attachments__c.field-meta.xml
<CustomField>
    <fullName>has_attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_attachments</description>
    <externalDeveloperName>has_attachments</externalDeveloperName>
    <label>has_attachments</label>
    <type>Checkbox</type>
</CustomField>