force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/model_number__c.field-meta.xml
<CustomField>
    <fullName>model_number__c</fullName>
    <description>model_number</description>
    <externalDeveloperName>model_number</externalDeveloperName>
    <label>model_number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>