force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/modifiedby_name__c.field-meta.xml
<CustomField>
    <fullName>modifiedby_name__c</fullName>
    <description>modifiedby_name</description>
    <externalDeveloperName>modifiedby_name</externalDeveloperName>
    <label>modifiedby_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>