force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/product_category__c.field-meta.xml
<CustomField>
    <fullName>product_category__c</fullName>
    <description>product_category</description>
    <externalDeveloperName>product_category</externalDeveloperName>
    <label>product_category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>