force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/tire_psi__c.field-meta.xml
<CustomField>
    <fullName>tire_psi__c</fullName>
    <description>tire_psi</description>
    <externalDeveloperName>tire_psi</externalDeveloperName>
    <label>tire_psi</label>
    <length>50</length>
    <type>Text</type>
</CustomField>