force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/uom__c.field-meta.xml
<CustomField>
    <fullName>uom__c</fullName>
    <description>uom</description>
    <externalDeveloperName>uom</externalDeveloperName>
    <label>uom</label>
    <length>200</length>
    <type>Text</type>
</CustomField>