force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/updated_date__c.field-meta.xml
<CustomField>
    <fullName>updated_date__c</fullName>
    <description>updated_date</description>
    <externalDeveloperName>updated_date</externalDeveloperName>
    <label>updated_date</label>
    <type>DateTime</type>
</CustomField>