force-app/main/default/objects/eCard_Bus_Serial_Number__x/fields/updatedby_name__c.field-meta.xml
<CustomField>
    <fullName>updatedby_name__c</fullName>
    <description>updatedby_name</description>
    <externalDeveloperName>updatedby_name</externalDeveloperName>
    <label>updatedby_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>